[package]
name = "manhattan"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
authors = [ "Jakob Klemm <jakob@jeykey.net>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
