[package]
name = "manhattan"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
authors = [ "Jakob Klemm <jakob@jeykey.net>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
tokio = { version = "1.28.0", features = ["sync", "full"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
rand = "0.8.5"
